--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
     <div class="wrapper">
       <main>
         <div class="buttons">
-          <button value="one" class="digit-btn">+</button>
-          <button value="two" class="digit-btn">+</button>
-          <button value="three" class="digit-btn">+</button>
-          <button value="four" class="digit-btn">+</button>
-          <button value="five" class="digit-btn">+</button>
-          <button value="six" class="digit-btn">+</button>
+          <button value="oneplus" class="digit-btn">+</button>
+          <button value="twoplus" class="digit-btn">+</button>
+          <button value="threeplus" class="digit-btn">+</button>
+          <button value="fourplus" class="digit-btn">+</button>
+          <button value="fiveplus" class="digit-btn">+</button>
+          <button value="sixplus" class="digit-btn">+</button>
         </div>
         <div class="numbers">
-          <h1>1</h1>
-          <h1>2</h1>
-          <h1>3</h1>
-          <h1>4</h1>
-          <h1>5</h1>
-          <h1>6</h1>
+          <h1 id="one">1</h1>
+          <h1 id="two">2</h1>
+          <h1 id="three">3</h1>
+          <h1 id="four">4</h1>
+          <h1 id="five">5</h1>
+          <h1 id="six">6</h1>
         </div>
+        <h2 class="test123">123456</h2>
         <div class="buttons">
-          <button value="one" class="digit-btn">-</button>
-          <button value="two" class="digit-btn">-</button>
-          <button value="three" class="digit-btn">-</button>
-          <button value="four" class="digit-btn">-</button>
-          <button value="five" class="digit-btn">-</button>
-          <button value="six" class="digit-btn">-</button>
+          <button value="onemin" class="digit-btn">-</button>
+          <button value="twomin" class="digit-btn">-</button>
+          <button value="threemin" class="digit-btn">-</button>
+          <button value="fourmin" class="digit-btn">-</button>
+          <button value="fivemin" class="digit-btn">-</button>
+          <button value="sixmin" class="digit-btn">-</button>
         </div>
         <button value="gen" id="random-btn" class="gen-color">gen</button>
       </main>
