--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
           <h1 id="five">5</h1>
           <h1 id="six">6</h1>
         </div>
-        <h2 class="test123">123456</h2>
         <div class="buttons">
           <button value="onemin" class="digit-btn">-</button>
           <button value="twomin" class="digit-btn">-</button>
@@ -34,7 +33,7 @@
           <button value="fivemin" class="digit-btn">-</button>
           <button value="sixmin" class="digit-btn">-</button>
         </div>
-        <button value="gen" id="random-btn" class="gen-color">gen</button>
+        <button value="gen" id="random-btn" class="gen-color">?</button>
       </main>
     </div>
     <script src="./script.js"></script>
